Fix: copy and spacing to titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@
 	padding-top: 30px;
 }
 
+.title_padding{
+  padding-top: 8px;
+}
+
 p{
 /*	padding-top: 10px;*/
 	font-size: 16px;
